--- a/src/index.css
+++ b/src/index.css
@@ -17,28 +17,69 @@ code {
     monospace;
 }
 
-.container {
-  font-size: 16px;
-}
-
 .title {
-  font-size: 24px;
+  font-size: 28px;
   margin-bottom: 16px;
 }
 
-.btns {
+.form {
   display: flex;
-  gap: 4px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.btn {
-  cursor: pointer;
-  padding: 4px 8px;
-  background: #fff;
-  border: 1px solid #ddd;
+.form label {
+  display: flex;
+  flex-direction: column;
+}
+
+.form span {
+  font-size: 16px;
+  margin-bottom: 4px;
+}
+
+input {
+  min-width: 200px;
+  padding: 8px;
   border-radius: 4px;
+  margin-bottom: 16px;
 }
 
-.btns {
-  margin-bottom: 40px;
+li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form button {
+  cursor: pointer;
+  min-width: 200px;
+  margin: 16px 0 32px;
+  padding: 8px;
+  background: #fff;
+  border: 2px solid #1d1d1d;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.contacts li {
+  list-style-type: none;
+  font-size: 16px;
+}
+
+.delete {
+  cursor: pointer;
+  font-size: 12px;
+  padding: 2px 4px;
+  background: #fff;
+  border: 2px solid #1d1d1d;
+  border-radius: 4px;
+  margin-left: 8px;
 }
